Update docs: add M5 deployment issues and solutions

--- a/开发任务清单-M1-M4.md
+++ b/开发任务清单-M1-M4.md
@@ -367,9 +367,40 @@ name?: string;
 - [x] 筛选功能
 - [ ] 离线队列与失败重试（待实现）
 
+### M5 公网部署 🚧
+- [x] 后端 Railway 部署
+- [x] 数据库 Railway PostgreSQL
+- [x] Web 前端 Vercel 部署
+- [x] Android APK GitHub Actions 构建
+- [x] 公网 API 地址配置（Web/Android → Railway）
+- [x] CORS 生产环境配置
+- [ ] Railway 后端启动配置修复（进行中）
+- [ ] Android APK 离线 Bundle 验证（进行中）
+
 ---
 
-## 备注
+## M5 部署配置要点（供大模型参考）
+
+### Railway 后端配置
+```
+Root Directory: todo-api
+Build Command: npm install && npm run build
+Start Command: node dist/main.js
+```
+
+### Vercel Web 配置
+```
+Root Directory: todo-web
+Build Command: npm run build
+Output Directory: dist
+```
+
+### GitHub Actions Android 构建
+需要在 workflow 中手动打包 JS Bundle，否则 APK 会红屏报错 "Unable to load script"
+
+### 公网地址
+- 后端 API: https://20260220todoapk-production.up.railway.app
+- Web 前端: https://20260220-todo-apk.vercel.app
 
 - 本文档为“可执行任务清单”，每一条都可以独立完成并验收。
 - 新手建议按顺序执行，遇到报错可对照“验收点”排查。
