--- a/调试日志与问题清单.md
+++ b/调试日志与问题清单.md
@@ -246,6 +246,143 @@ EMAIL_PASS=your-app-password
 
 ---
 
+## 问题 16：GitHub Actions 构建 Android APK 失败 - todo-mobile 是 Git Submodule
+
+**现象：**
+```
+npm error path /home/runner/work/20260220TodoAPK/20260220TodoAPK/todo-mobile/package.json
+npm error enoent Could not read package.json
+fatal: No url found for submodule path 'todo-mobile' in .gitmodules
+```
+**原因：** `todo-mobile` 在仓库里是 Git submodule 指针（mode 160000），Actions checkout 时只拉取引用，不包含实际文件
+**解决：**
+```bash
+# 1. 删除本地的 .git 目录（如果是 submodule）
+rm -rf todo-mobile/.git
+
+# 2. 重新 add 并 commit 为普通目录
+git add todo-mobile
+git commit -m "Fix: merge todo-mobile into main repo"
+git push origin main
+```
+
+---
+
+## 问题 17：Vercel 部署 Web 前端 404
+
+**现象：** 访问 `https://20260220-todo-apk.vercel.app` 显示 404
+**原因：** 仓库是 monorepo（包含 todo-api/、todo-mobile/、todo-web/），Vercel 没指定 Root Directory
+**解决：**
+1. Vercel 项目 Settings → General → Root Directory 设置为 `todo-web`
+2. 确认 Build Command: `npm run build`，Output Directory: `dist`
+
+---
+
+## 问题 18：Vercel 构建 TypeScript 错误 - JSX 未启用
+
+**现象：**
+```
+error TS6142: Module './components/TodoInput' was resolved to '...', but '--jsx' is not set.
+error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
+```
+**原因：** `tsconfig.json` 缺少 `jsx` 配置
+**解决：** 在 `todo-web/tsconfig.json` 的 `compilerOptions` 中添加：
+```json
+{
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "allowJs": true,
+    "esModuleInterop": true
+  }
+}
+```
+
+---
+
+## 问题 19：Vercel 构建 TypeScript 错误 - 未使用的导入
+
+**现象：**
+```
+error TS6133: 'TodoResponse' is declared but its value is never read.
+```
+**解决：** 移除未使用的导入
+```typescript
+// 错误
+import { todosApi, type TodoResponse, type TodoChange } from './utils/api';
+// 正确
+import { todosApi, type TodoChange } from './utils/api';
+```
+
+---
+
+## 问题 20：Web 端登录 Failed to fetch - 后端未启动
+
+**现象：** 登录时显示 "Failed to fetch"，控制台显示 CORS 错误
+**原因：** Railway 后端服务未正常启动（见问题 21）
+**解决：** 先修复 Railway 部署问题，后端启动后 CORS 会自动生效
+
+---
+
+## 问题 21：Railway 后端启动失败 - npm: command not found
+
+**现象：**
+```
+start.sh: line 3: npm: command not found
+start.sh: line 4: npm: command not found
+Application failed to respond
+```
+**原因：** Railway 使用了 start.sh 脚本启动，但容器中没有 Node/npm 环境
+**解决：**
+1. 删除根目录的 `start.sh`（或从 Git 移除）
+2. 在 Railway 服务 Settings 中配置：
+   - **Root Directory**: `todo-api`
+   - **Build Command**: `npm install && npm run build`
+   - **Start Command**: `node dist/main.js`
+3. 点击 "Apply Changes" 触发重新部署
+
+**Railway 配置文件（推荐）：**
+```toml
+# railway.toml（放在项目根目录）
+[build]
+builder = "NIXPACKS"
+
+[deploy]
+startCommand = "node todo-api/dist/main.js"
+```
+
+---
+
+## 问题 22：Android APK 运行红屏 - Unable to load script
+
+**现象：** 安装 APK 后打开显示红屏 "Unable to load script"
+**原因：** APK 中没有包含 JS Bundle，运行时需要从 Metro 服务器加载
+**解决：** 在 GitHub Actions 中手动打包 JS Bundle：
+```yaml
+- name: Build APK
+  run: |
+    mkdir -p android/app/src/main/assets
+    npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+    cd android && ./gradlew assembleDebug
+```
+
+---
+
+## 问题 23：后端 CORS 配置
+
+**现象：** 跨域请求被拦截
+**原因：** CORS 配置只允许 localhost，生产环境需要允许所有来源
+**解决：** 在 `todo-api/src/main.ts` 中配置：
+```typescript
+app.enableCors({
+  origin: true, // 允许所有来源
+  methods: 'GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS',
+  credentials: true,
+  allowedHeaders: 'Content-Type, Accept, Authorization',
+});
+```
+
+---
+
 ## 二、关键配置检查清单
 
 ### 环境变量
