fix: add @react-native-community/cli and update docs

--- a/开发任务清单-M1-M4.md
+++ b/开发任务清单-M1-M4.md
@@ -367,15 +367,15 @@ name?: string;
 - [x] 筛选功能
 - [ ] 离线队列与失败重试（待实现）
 
-### M5 公网部署 🚧
-- [x] 后端 Railway 部署
-- [x] 数据库 Railway PostgreSQL
-- [x] Web 前端 Vercel 部署
-- [x] Android APK GitHub Actions 构建
-- [x] 公网 API 地址配置（Web/Android → Railway）
-- [x] CORS 生产环境配置
-- [ ] Railway 后端启动配置修复（进行中）
-- [ ] Android APK 离线 Bundle 验证（进行中）
+### M5 公网部署 ✅
+- [x] 后端 Railway 部署 (Dockerfile, 0.0.0.0, OpenSSL)
+- [x] 数据库 Railway PostgreSQL (修复变量污染)
+- [x] Web 前端 Vercel 部署 (tsconfig.json 修复)
+- [x] Android APK GitHub Actions 构建 (修复 JS Bundle 缺失)
+- [x] 公网 API 地址配置 (Web/Android → Railway)
+- [x] 数据库自动同步 (CMD 运行 `prisma db push`)
+- [ ] 验证 Web 注册/登录功能
+- [ ] 验证 Android APK 联网功能
 
 ---
 
