--- a/调试日志与问题清单.md
+++ b/调试日志与问题清单.md
@@ -446,7 +446,26 @@ Invoke-WebRequest -Uri "http://localhost:3000/" -UseBasicParsing
 # 注册（需要先创建 .ps1 脚本避免 JSON 转义问题）
 ```
 
-### 重启服务
+### 11. M5 部署阶段问题清单 (2026-02-20)
+
+- **Railway 后端 502 Bad Gateway**
+    - **现象**：后端部署成功但公网访问返回 502。
+    - **原因**：
+        1. Postgres 服务的 `DATABASE_URL` 变量被错误覆盖为字符串 `"DATABASE_URL"`，导致变量引用链断裂。
+        2. NestJS 默认监听 `localhost`，在 Docker 容器中必须监听 `0.0.0.0`。
+    - **解决**：清理 Postgres 变量污染，后端 `DATABASE_URL` 改为引用 `${{Postgres.DATABASE_PUBLIC_URL}}`；修改 `main.ts` 监听 `0.0.0.0`。
+
+- **Prisma 报错 "The table public.User does not exist"**
+    - **现象**：后端启动成功但注册请求报错表不存在。
+    - **原因**：数据库是空的，Prisma Schema 未同步。本地网络无法连接 Railway TCP Proxy 导致 `npx prisma db push` 失败。
+    - **解决**：在 `Dockerfile` 的 `CMD` 中添加 `npx prisma db push --accept-data-loss`，利用 Railway 内网环境在启动时自动同步。
+
+- **Dockerfile CMD 不执行 (Start Command 冲突)**
+    - **现象**：修改了 Dockerfile 的 CMD 但日志里没看到执行。
+    - **原因**：Railway Web 界面设置了 **Start Command**，它会覆盖 Dockerfile 的 `CMD`。
+    - **解决**：在 Railway Settings 中清空 Start Command，或者显式设置为包含同步逻辑的 `sh -c` 命令。
+
+---
 ```powershell
 # 杀掉 node 进程
 taskkill /F /IM node.exe
