docs: record Android CI build failures and reproducible fixes

--- a/开发任务清单-M1-M4.md
+++ b/开发任务清单-M1-M4.md
@@ -300,6 +300,23 @@ name?: string;
 - **产出**：可安装的 `.apk` 文件
 - **验收点**： APK 安装到手机后能正常登录和同步
 
+#### M5-AND-01A Android APK（GitHub Actions）排障记录（可复刻）
+
+- **症状 1：Gradle 日志超长，网页端卡死**
+  - **做法**：优先定位首个 `FAILURE:` 与第一条 `Execution failed for task`，在本地日志用搜索 `e:`（Kotlin）/`error:`（Java）。
+
+- **症状 2：CI 依赖树与本地不一致（导致误判版本冲突）**
+  - **根因**：workflow 使用 `npm install` 可能导致依赖漂移。
+  - **修复**：改为 `npm ci`，并在构建前打印关键依赖版本（`react-native` / `react-native-reanimated` / `react-native-gesture-handler`）。
+
+- **症状 3：原生编译失败（首个阻塞点为 gesture-handler Kotlin 编译）**
+  - **错误特征**：`RNGestureHandlerPackage.kt` 出现 `overrides nothing` / `does not implement abstract members`。
+  - **根因**：`react-native@0.81.5` 与 `react-native-gesture-handler@2.20.2` API 不兼容。
+  - **修复**：升级 `react-native-gesture-handler`（例如 `2.30.0`）。
+
+- **补充：Reanimated 版本对齐**
+  - **做法**：升级 `react-native-reanimated`（例如 `4.2.2`），并通过 CI 版本打印确认确实生效。
+
 ### M5-AND-02 配置公网 API 地址
 - **内容**：修改移动端 API 地址指向云端后端
 - **产出**：手机 App 连接云端服务
