--- a/调试日志与问题清单.md
+++ b/调试日志与问题清单.md
@@ -517,4 +517,74 @@ cd todo-web && npm run dev
 
 ---
 
+## 12. M5 Android APK 构建失败排障记录（2026-02-21）
+
+### 背景
+
+目标是在 GitHub Actions 中构建可离线运行的 Debug APK（包含 JS Bundle）。构建使用 Expo prebuild 生成原生工程，并执行 Gradle `assembleDebug`。
+
+### 问题 1：Actions 日志过长导致网页卡死，无法快速定位首个错误
+
+**现象**：Gradle 开启 `--info` 后日志非常长，在 GitHub 网页端翻阅容易卡死，导致“看起来像一直在编译”。
+
+**解决策略（可复刻）**：
+- 优先抓“首个真实错误块”，而不是盯着最后一行。
+- 关键检索词（从上到下找第一次出现处）：
+  - `FAILURE: Build failed with an exception.`
+  - `* What went wrong:`
+  - `Execution failed for task` 
+  - `e: `（Kotlin 编译错误常用前缀）
+  - `error: `（Java/Javac 错误常用前缀）
+- 如果网页端卡死：下载 Logs ZIP 或保存 step 日志为本地 txt，用文本搜索定位。
+
+### 问题 2：误判为 Reanimated 不兼容，但实际首个阻塞点是 Gesture Handler Kotlin 编译
+
+**现象**：构建阶段多次停在原生编译，看起来像 `react-native-reanimated` 相关，但真正导致构建失败的首个任务是：
+```
+Execution failed for task ':react-native-gesture-handler:compileDebugKotlin'.
+```
+
+**关键证据（Kotlin 报错）**：
+```
+Class 'RNGestureHandlerPackage' is not abstract and does not implement abstract members
+'getViewManagerNames' overrides nothing
+'getViewManagers' overrides nothing
+'createViewManager' overrides nothing
+```
+
+**根因**：
+- 项目使用 `react-native@0.81.5`（Expo 54）。
+- `react-native-gesture-handler@2.20.2` 与当前 RN 的 `ReactPackage`/ViewManager API 签名不兼容，导致 `RNGestureHandlerPackage.kt` override 失败。
+
+**修复**：升级 `react-native-gesture-handler` 到新版本（例如 `2.30.0`），让其适配 RN 0.81.x。
+
+### 问题 3：Reanimated 版本冲突/疑似未生效（需要让 CI 自证依赖版本）
+
+**现象**：日志中出现“像是旧版本 Reanimated 报错”的信息时，无法确认 CI 实际安装的版本是否与本地一致。
+
+**根因**：
+- workflow 使用 `npm install` 时，可能出现依赖树漂移/缓存导致与 lockfile 不一致。
+
+**修复策略（让 CI 可自证）**：
+- 将 Actions 的依赖安装改为 `npm ci`（严格按 `package-lock.json`）。
+- 在构建前打印真实依赖版本：
+  - `npm ls react-native --depth=0`
+  - `npm ls react-native-reanimated --depth=0`
+  - `npm ls react-native-gesture-handler --depth=0`
+  - `node -p "require('react-native/package.json').version"` 等
+
+**结果**：在日志中明确看到版本：
+- `react-native@0.81.5`
+- `react-native-reanimated@4.2.2`
+- `react-native-gesture-handler@2.20.2`（随后升级解决）
+
+### 可复刻的最小排障流程（建议以后按这个顺序）
+
+1. 在 CI 日志中定位第一次出现的 `FAILURE` 块。
+2. 看第一条 `Execution failed for task ...` 指向哪个模块。
+3. 如果是 Kotlin 编译失败，优先找 `e:` 行并定位具体 `.kt` 文件与签名错误。
+4. 通过 `npm ls <pkg> --depth=0` 和 `node -p require(...).version` 固定“真实版本”，避免凭感觉升级。
+5. 不要用 `npm install` 让 CI 自己决定依赖树；使用 `npm ci`。
+
+
 *本文档随项目迭代更新，建议每次遇到新问题后补充到对应章节。*
