docs: add minimal repro commands for Android CI build

--- a/开发任务清单-M1-M4.md
+++ b/开发任务清单-M1-M4.md
@@ -317,6 +317,48 @@ name?: string;
 - **补充：Reanimated 版本对齐**
   - **做法**：升级 `react-native-reanimated`（例如 `4.2.2`），并通过 CI 版本打印确认确实生效。
 
+##### 从 0 复刻的最小命令序列（简版）
+
+- **本地（Windows / PowerShell，在 todo-mobile）**
+```powershell
+npm ci
+npm ls react-native --depth=0
+npm ls react-native-reanimated --depth=0
+npm ls react-native-gesture-handler --depth=0
+
+if (Test-Path .\android) { Remove-Item -Recurse -Force .\android }
+npx expo prebuild --platform android
+
+New-Item -ItemType Directory -Force .\android\app\src\main\assets | Out-Null
+Remove-Item -Recurse -Force .\android\app\src\main\assets\* -ErrorAction SilentlyContinue
+npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+cd .\android
+./gradlew --stop
+./gradlew clean assembleDebug --stacktrace --warning-mode all
+```
+
+- **CI（ubuntu-latest，workflow 核心步骤）**
+```bash
+cd todo-mobile
+npm ci
+npm ls react-native --depth=0 || true
+npm ls react-native-reanimated --depth=0 || true
+npm ls react-native-gesture-handler --depth=0 || true
+
+rm -rf android
+npx expo prebuild --platform android
+
+mkdir -p android/app/src/main/assets
+rm -rf android/app/src/main/assets/*
+npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+cd android
+chmod +x gradlew
+./gradlew --stop || true
+./gradlew clean assembleDebug --stacktrace --warning-mode all
+```
+
 ### M5-AND-02 配置公网 API 地址
 - **内容**：修改移动端 API 地址指向云端后端
 - **产出**：手机 App 连接云端服务
