--- a/调试日志与问题清单.md
+++ b/调试日志与问题清单.md
@@ -586,5 +586,69 @@ Class 'RNGestureHandlerPackage' is not abstract and does not implement abstract 
 4. 通过 `npm ls <pkg> --depth=0` 和 `node -p require(...).version` 固定“真实版本”，避免凭感觉升级。
 5. 不要用 `npm install` 让 CI 自己决定依赖树；使用 `npm ci`。
 
+### 从 0 复刻的最小命令序列
+
+#### A) 本地复刻（Windows / PowerShell）
+
+在 `todo-mobile` 目录执行：
+```powershell
+# 0. 使用 lockfile 还原依赖树（比 npm install 更稳定）
+npm ci
+
+# 1. 自证版本（排除“装的不是你以为的版本”）
+npm ls react-native --depth=0
+npm ls react-native-reanimated --depth=0
+npm ls react-native-gesture-handler --depth=0
+
+# 2. 重新生成原生工程（确保依赖变更进入 android/）
+if (Test-Path .\android) { Remove-Item -Recurse -Force .\android }
+npx expo prebuild --platform android
+
+# 3. 生成离线 bundle（否则 APK 运行会红屏 Unable to load script）
+New-Item -ItemType Directory -Force .\android\app\src\main\assets | Out-Null
+Remove-Item -Recurse -Force .\android\app\src\main\assets\* -ErrorAction SilentlyContinue
+npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+# 4. 编译 APK
+cd .\android
+./gradlew --stop
+./gradlew clean assembleDebug --stacktrace --warning-mode all
+```
+
+#### B) CI 复刻（GitHub Actions / ubuntu-latest）
+
+核心点是“依赖可复现 + 版本可自证 + 先 bundle 再 assemble”。最小脚本形态如下（示意，实际以 workflow 为准）：
+```bash
+cd todo-mobile
+
+npm ci
+npm ls react-native --depth=0 || true
+npm ls react-native-reanimated --depth=0 || true
+npm ls react-native-gesture-handler --depth=0 || true
+node -p "require('react-native/package.json').version" || true
+
+rm -rf android
+npx expo prebuild --platform android
+
+mkdir -p android/app/src/main/assets
+rm -rf android/app/src/main/assets/*
+npx react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+cd android
+chmod +x gradlew
+./gradlew --stop || true
+./gradlew clean assembleDebug --stacktrace --warning-mode all
+```
+
+#### C) 从日志中快速抓“首错”的搜索词
+
+```text
+FAILURE: Build failed with an exception.
+* What went wrong:
+Execution failed for task
+e: 
+error: 
+```
+
 
 *本文档随项目迭代更新，建议每次遇到新问题后补充到对应章节。*
